--- a/Root/Sign-upForm/test/style2.css
+++ b/Root/Sign-upForm/test/style2.css
@@ -26,6 +26,7 @@
 .right {
     background-color: red;
     width: 100%;
+    height: 100%;
     border: solid;
     
     padding: 10px;
@@ -33,15 +34,28 @@
 
 header {
     background-color: palegoldenrod;
+    height: 33vh;
 }
 
 section {
     background-color: aquamarine;
 }
 
+form {
+    background-color: aqua;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .formElement {
     padding-left: 5px;
     padding-top: 10px;
+    margin: 10px;
+    width: 33%;
+    background-color: blue;
+
+    font-weight: bold;
 }
 
 .formElement > input {
