--- a/Root/Sign-upForm/test/style2.css
+++ b/Root/Sign-upForm/test/style2.css
@@ -16,6 +16,11 @@
     padding: 10px;
 }
 
+img {
+    padding-top: 15px;
+    padding-left: 15px;
+}
+
 #splash {
     background-color: beige;
     font-size: x-large;
@@ -26,7 +31,6 @@
 .right {
     background-color: red;
     width: 100%;
-    height: 100%;
     border: solid;
     
     padding: 10px;
