--- a/Root/Sign-upForm/test/style2.css
+++ b/Root/Sign-upForm/test/style2.css
@@ -9,7 +9,7 @@
 }
 
 .left {
-    width: 55%;
+    width: 85%;
     border-right: solid;
     background-image: url("tren.png");
 }
@@ -23,6 +23,8 @@ img {
     font-size: x-large;
     font-family: monospace;
     color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-top: 100%;
     width: 100%;
     text-align: center;
@@ -31,15 +33,17 @@ img {
 }
 
 .right {
-    width: 100%;    
-    padding: 10px;
+    height: 100vh;
 }
 
 header {
-    height: 33vh;
+    padding-left: 10px;
+    height: 40%;
 }
 
 section {
+    padding-left: 10px;
+    height: 30%;
 }
 
 form {
@@ -59,4 +63,18 @@ form {
 
 .formElement > input {
     margin-left: 5px;
+}
+
+#gearButton {
+    font-family: monospace;
+    font-size: larger;
+    margin: 25px;
+    padding: 10px 30px;
+    border-radius: 15px;
+    background-color: rgb(226, 159, 35);
+}
+
+footer {
+    height: 30%;
+    background-image: linear-gradient(white, rgb(141, 95, 51));
 }
